# crm

./: Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm-common/: Cargo.toml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: server.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/examples/: client.rs  server.rs
crm/src/: config.rs  lib.rs  main.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs
protos/crm/: message.proto  messages.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: Cargo.toml  build.rs
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20260508025031_init.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
