[workspace]
resolver = "3"
members = ["crm"]

[workspace.dependencies]
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.82"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["zstd", "tls-webpki-roots"] }
tonic-prost = { version = "0.14.5" }
tonic-prost-build = "0.14.5"
prost-build = "0.14.3"
