[workspace]
resolver = "3"
members = ["crm", "user-stat"]

[workspace.dependencies]
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.82"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["zstd", "tls-webpki-roots"] }
tonic-prost = { version = "0.14.5" }
tonic-prost-build = "0.14.5"
prost-build = "0.14.3"

# Web框架
axum = { version = "0.8.9", features = ["macros"] }

# 数据库相关
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls","chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 工具库
tower = "0.4"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
