[workspace]
resolver = "3"
members = ["crm", "crm-send", "crm-metadata", "crm-common", "user-stat"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.32"
anyhow = "1.0.82"
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["zstd", "tls-webpki-roots"] }
tonic-prost = { version = "0.14.5" }
tonic-prost-build = "0.14.5"
prost-build = "0.14.3"
serde_yaml = "0.9.34+deprecated"

# Web框架
axum = { version = "0.8.9", features = ["macros"] }

# 数据库相关
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
serde = { version = "1.0.228" }
serde_json = "1.0.149"

# 工具库
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
derive_builder = { version = "0.20.2" }
