[package]
name = "crm-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
rand = "0.10.1"
itertools = "0.14.0"
tokio-stream = "0.1.18"
fake = { version = "5.1.0", features = ["derive", "chrono"] }
[dev-dependencies]

nanoid = "0.5.0"

[build-dependencies]
fake = { version = "5.1.0", features = ["derive", "chrono"] }
crm-common = { path = "../crm-common" }
anyhow = { workspace = true }
