[package]
name = "crm"
version = "0.1.0"
edition = "2024"
license = "MIT"
[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }
