[package]
name = "crm"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing-subscriber = { workspace = true }
[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }
crm-common = { path = "../crm-common" }
