[package]
name = "crm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]


tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
tokio-stream = { workspace = true }
user-stat = { workspace = true }
crm-send = { workspace = true }
crm-metadata = { workspace = true }

[build-dependencies]
crm-common = { path = "../crm-common" }
anyhow = { workspace = true }
