[package]
name = "user-stat"
version = "0.1.0"
edition = "2024"
license = "MIT"
[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
rand = "0.10.1"


[dev-dependencies]
fake = { version = "5.1.0", features = ["derive", "chrono"] }
nanoid = "0.5.0"
